--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2020.9.22:
+- Added RadioButton.
+- Added demo examples.
+
 2020.9.18:
 - Fixed scrolled text bad index and missing scrollbar imports
 - Add limitation to readme
