--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2021.3.18:
+- [progressbar, buttons] reuse images to improve performance
+- [scrollable_frame] improve performance
+
 2021.1.7:
 - Fix button and progressbar style to support more themes.
 - bug fixes.
