--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2021.3.19:
+- [critical] fix checkbox and radiobutton images
+
 2021.3.18:
 - [progressbar, buttons] reuse images to improve performance
 - [scrollable_frame] improve performance
