--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2021.5.10:
+- fix bidi import and fix move_cursor_to_left function.
+
 2021.5.9:
 - Added support to bidi language e.g. Arabic to be shown properly in tkinter widgets.
 
