--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2021.5.23:
+- limit bidi support to linux, since windows handle bidi in os level.
+- fixed selected text deletion with delete and bkspace keys in bidi supported entry.
+
 2021.5.10:
 - fix bidi import and fix move_cursor_to_left function.
 
